--- a/apps/homecontrol/static/index.html
+++ b/apps/homecontrol/static/index.html
@@ -4,8 +4,24 @@
 		<title>Home automation</title>
 		<meta name="viewport" content="user-scalable=no,width=device-width" />
 		<style type="text/css">
+			html, body {
+				height: 100%;
+			}
 			body {
 				-webkit-user-select: none;
+
+				background: -webkit-gradient(
+					linear,
+					left bottom,
+					left top,
+					color-stop(0.18, rgb(0,0,0)),
+					color-stop(0.59, rgb(23,23,23))
+				);
+				background: -moz-linear-gradient(
+					center bottom,
+					rgb(0,0,0) 18%,
+					rgb(23,23,23) 59%
+				);
 			}
 		</style>
 
